package com.java.JAVA_ASSIGNMENT;

public interface WalletDao {

    public void reduceWalletBalance(double paidAmount);
    public void topUpWalletBalance(double topUpAmount);


}
