@startuml

title __OMAZON's Class Diagram__\n

  namespace com.java.JAVA_ASSIGNMENT {
    class com.java.JAVA_ASSIGNMENT.Cart {
    }
  }
  

  namespace com.java.JAVA_ASSIGNMENT {
    interface com.java.JAVA_ASSIGNMENT.CartDao {
    }
  }
  

  namespace com.java.JAVA_ASSIGNMENT {
    class com.java.JAVA_ASSIGNMENT.CartDaoImp {
    }
  }
  

  namespace com.java.JAVA_ASSIGNMENT {
    class com.java.JAVA_ASSIGNMENT.Customer {
    }
  }
  

  namespace com.java.JAVA_ASSIGNMENT {
    interface com.java.JAVA_ASSIGNMENT.CustomerDao {
    }
  }
  

  namespace com.java.JAVA_ASSIGNMENT {
    class com.java.JAVA_ASSIGNMENT.CustomerDaoImp {
    }
  }
  

  namespace com.java.JAVA_ASSIGNMENT {
    class com.java.JAVA_ASSIGNMENT.DatabaseHandler {
    }
  }
  

  namespace com.java.JAVA_ASSIGNMENT {
    class com.java.JAVA_ASSIGNMENT.Favorites {
    }
  }
  

  namespace com.java.JAVA_ASSIGNMENT {
    interface com.java.JAVA_ASSIGNMENT.FavoritesDao {
    }
  }
  

  namespace com.java.JAVA_ASSIGNMENT {
    class com.java.JAVA_ASSIGNMENT.FavoritesDaoImp {
    }
  }
  

  namespace com.java.JAVA_ASSIGNMENT {
    class com.java.JAVA_ASSIGNMENT.Feedback {
    }
  }
  

  namespace com.java.JAVA_ASSIGNMENT {
    interface com.java.JAVA_ASSIGNMENT.FeedbackDao {
    }
  }
  

  namespace com.java.JAVA_ASSIGNMENT {
    class com.java.JAVA_ASSIGNMENT.FeedbackDaoImp {
    }
  }
  

  namespace com.java.JAVA_ASSIGNMENT {
    class com.java.JAVA_ASSIGNMENT.Main {
    }
  }
  

  namespace com.java.JAVA_ASSIGNMENT {
    class com.java.JAVA_ASSIGNMENT.Notification {
    }
  }
  

  namespace com.java.JAVA_ASSIGNMENT {
    interface com.java.JAVA_ASSIGNMENT.NotificationDao {
    }
  }
  

  namespace com.java.JAVA_ASSIGNMENT {
    class com.java.JAVA_ASSIGNMENT.NotificationDaoImp {
    }
  }
  

  namespace com.java.JAVA_ASSIGNMENT {
    interface com.java.JAVA_ASSIGNMENT.OrderDao {
    }
  }
  

  namespace com.java.JAVA_ASSIGNMENT {
    class com.java.JAVA_ASSIGNMENT.Orders {
    }
  }
  

  namespace com.java.JAVA_ASSIGNMENT {
    class com.java.JAVA_ASSIGNMENT.OrdersDaoImp {
    }
  }
  

  namespace com.java.JAVA_ASSIGNMENT {
    class com.java.JAVA_ASSIGNMENT.Product {
    }
  }
  

  namespace com.java.JAVA_ASSIGNMENT {
    interface com.java.JAVA_ASSIGNMENT.ProductDao {
    }
  }
  

  namespace com.java.JAVA_ASSIGNMENT {
    class com.java.JAVA_ASSIGNMENT.ProductDaoImp {
    }
  }
  

  namespace com.java.JAVA_ASSIGNMENT {
    class com.java.JAVA_ASSIGNMENT.Seller {
    }
  }
  

  namespace com.java.JAVA_ASSIGNMENT {
    interface com.java.JAVA_ASSIGNMENT.SellerDao {
    }
  }
  

  namespace com.java.JAVA_ASSIGNMENT {
    class com.java.JAVA_ASSIGNMENT.SellerDaoImp {
    }
  }
  

  namespace com.java.JAVA_ASSIGNMENT {
    class com.java.JAVA_ASSIGNMENT.User {
    }
  }
  

  namespace com.java.JAVA_ASSIGNMENT {
    class com.java.JAVA_ASSIGNMENT.Wallet {
    }
  }
  

  namespace com.java.JAVA_ASSIGNMENT {
    interface com.java.JAVA_ASSIGNMENT.WalletDao {
    }
  }
  

  namespace com.java.JAVA_ASSIGNMENT {
    class com.java.JAVA_ASSIGNMENT.WalletDaoImp {
    }
  }
  

  namespace com.java.JAVA_ASSIGNMENT {
    class com.java.JAVA_ASSIGNMENT.WalletTransaction {
    }
  }
  

  namespace com.java.JAVA_ASSIGNMENT {
    interface com.java.JAVA_ASSIGNMENT.WalletTransactionDao {
    }
  }
  

  namespace com.java.JAVA_ASSIGNMENT {
    class com.java.JAVA_ASSIGNMENT.WalletTransactionDaoImp {
    }
  }
  

  com.java.JAVA_ASSIGNMENT.Cart o-- com.java.JAVA_ASSIGNMENT.Product : cartProduct
  com.java.JAVA_ASSIGNMENT.CartDaoImp .up.|> com.java.JAVA_ASSIGNMENT.CartDao
  com.java.JAVA_ASSIGNMENT.Customer -up-|> com.java.JAVA_ASSIGNMENT.User
  com.java.JAVA_ASSIGNMENT.Customer o-- com.java.JAVA_ASSIGNMENT.Wallet : userWallet
  com.java.JAVA_ASSIGNMENT.CustomerDaoImp .up.|> com.java.JAVA_ASSIGNMENT.CustomerDao
  com.java.JAVA_ASSIGNMENT.Favorites o-- com.java.JAVA_ASSIGNMENT.Product : favoritesProduct
  com.java.JAVA_ASSIGNMENT.FavoritesDaoImp .up.|> com.java.JAVA_ASSIGNMENT.FavoritesDao
  com.java.JAVA_ASSIGNMENT.Feedback o-- com.java.JAVA_ASSIGNMENT.Product : feedbackProduct
  com.java.JAVA_ASSIGNMENT.FeedbackDaoImp .up.|> com.java.JAVA_ASSIGNMENT.FeedbackDao
  com.java.JAVA_ASSIGNMENT.NotificationDaoImp .up.|> com.java.JAVA_ASSIGNMENT.NotificationDao
  com.java.JAVA_ASSIGNMENT.OrdersDaoImp .up.|> com.java.JAVA_ASSIGNMENT.OrderDao
  com.java.JAVA_ASSIGNMENT.ProductDaoImp .up.|> com.java.JAVA_ASSIGNMENT.ProductDao
  com.java.JAVA_ASSIGNMENT.Seller -up-|> com.java.JAVA_ASSIGNMENT.User
  com.java.JAVA_ASSIGNMENT.SellerDaoImp .up.|> com.java.JAVA_ASSIGNMENT.SellerDao
  com.java.JAVA_ASSIGNMENT.WalletDaoImp .up.|> com.java.JAVA_ASSIGNMENT.WalletDao
  com.java.JAVA_ASSIGNMENT.WalletTransactionDaoImp .up.|> com.java.JAVA_ASSIGNMENT.WalletTransactionDao


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
